@@ -1,5 +1,10 @@
 2014-05-14  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* OutlineTreeViewEditor.cpp:
+	* OutlineCellRenderer.cpp: 
+
+2014-05-14  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* OutlineEditor.cpp:
 	* OutlineTreeData.cpp:
 	* X3DOutlineTreeView.cpp: 
